# icra_2025_09

./: .gitignore  CMakeLists.txt  README.md  evaluate_all.sh  package.xml  resume_and_run_remaining.sh  run_all_with_tb.sh
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
docs/: impedance_controller_summary.md  run_policy_node_summary.md  run_policy_node_usage.md
hri_falcon_robot_bridge/: ball_tracker_node.py  data_logger_node.py  deformity_tracker_node.py  demo_ee_player_node.py  dynamixel_control.py  ee_dmp_player_node.py  emg_node.py  force_sensor_node.py  hand_tracker_node.py  haptic_robot_controller.py  impedance_controller_node.py  mms101_controller.py  mms101_controller_temp.py  robot_controller_node.py  run_policy_node.py  sense_glove_mj_node.py  torque_impedance_controller_node.py
launch/: bridge.launch.py  full_stiffness_pipeline.launch.py  haptic_system.launch.py  robot_controller.launch.py  stiffness_force_control.launch.py
outputs/analysis/: emg_channel_basic_20251123_165651.csv  emg_channel_collinearity_pairs_20251123_165651.csv  emg_channel_diagnostics_20251123_165651.json  emg_channel_stiff_corr_20251123_165651.csv  emg_monotonic_mapping_20251123_164634.json  emg_monotonic_metrics_20251123_164634.csv  emg_monotonic_subset_20251123_165257.json  emg_monotonic_subset_metrics_20251123_165257.csv  emg_monotonic_subset_weights_20251123_165257.csv  emg_monotonic_weights_20251123_164634.csv  emg_stiffness_channel_ranking_20251123_164401.csv  emg_stiffness_channel_ranking_20251123_164524.csv  emg_stiffness_correlation_20251123_164401.json  emg_stiffness_correlation_20251123_164524.json  emg_stiffness_pearson_20251123_164401.csv  emg_stiffness_pearson_20251123_164526.csv  emg_stiffness_spearman_20251123_164401.csv  emg_stiffness_spearman_20251123_164524.csv  force_stiffness_emg_summary.json  projector_invariance_report.csv  projector_invariance_report.json
outputs/parametric_remap_success/: parametric_remap_samples.csv  parametric_remap_summary.json
outputs/stiffness_profiles/: 20251122_011653_synced.csv  20251122_011653_synced_aug1.csv  20251122_011653_synced_aug2.csv  20251122_011653_synced_aug3.csv  20251122_011653_synced_aug4.csv  20251122_011653_synced_aug5.csv  20251122_021816_synced.csv  20251122_021816_synced_aug1.csv  20251122_021816_synced_aug2.csv  20251122_021816_synced_aug3.csv  20251122_021816_synced_aug4.csv  20251122_021816_synced_aug5.csv  20251122_022005_synced.csv  20251122_022005_synced_aug1.csv  20251122_022005_synced_aug2.csv  20251122_022005_synced_aug3.csv  20251122_022005_synced_aug4.csv  20251122_022005_synced_aug5.csv  20251122_022128_synced.csv  20251122_022128_synced_aug1.csv  20251122_022128_synced_aug2.csv  20251122_022128_synced_aug3.csv  20251122_022128_synced_aug4.csv  20251122_022128_synced_aug5.csv  20251122_022426_synced.csv  20251122_022426_synced_aug1.csv  20251122_022426_synced_aug2.csv  20251122_022426_synced_aug3.csv  20251122_022426_synced_aug4.csv  20251122_022426_synced_aug5.csv  20251122_022559_synced.csv  20251122_022559_synced_aug1.csv  20251122_022559_synced_aug2.csv  20251122_022559_synced_aug3.csv  20251122_022559_synced_aug4.csv  20251122_022559_synced_aug5.csv  20251122_022712_synced.csv  20251122_022712_synced_aug1.csv  20251122_022712_synced_aug2.csv  20251122_022712_synced_aug3.csv  (+20 more)
outputs/stiffness_profiles_signaligned/: 20251122_011653_synced_signaligned.csv  20251122_011653_synced_signaligned_aug1.csv  20251122_011653_synced_signaligned_aug2.csv  20251122_011653_synced_signaligned_aug3.csv  20251122_011653_synced_signaligned_aug4.csv  20251122_011653_synced_signaligned_aug5.csv  20251122_021816_synced_signaligned.csv  20251122_021816_synced_signaligned_aug1.csv  20251122_021816_synced_signaligned_aug2.csv  20251122_021816_synced_signaligned_aug3.csv  20251122_021816_synced_signaligned_aug4.csv  20251122_021816_synced_signaligned_aug5.csv  20251122_022005_synced_signaligned.csv  20251122_022005_synced_signaligned_aug1.csv  20251122_022005_synced_signaligned_aug2.csv  20251122_022005_synced_signaligned_aug3.csv  20251122_022005_synced_signaligned_aug4.csv  20251122_022005_synced_signaligned_aug5.csv  20251122_022128_synced_signaligned.csv  20251122_022128_synced_signaligned_aug1.csv  20251122_022128_synced_signaligned_aug2.csv  20251122_022128_synced_signaligned_aug3.csv  20251122_022128_synced_signaligned_aug4.csv  20251122_022128_synced_signaligned_aug5.csv  20251122_022426_synced_signaligned.csv  20251122_022426_synced_signaligned_aug1.csv  20251122_022426_synced_signaligned_aug2.csv  20251122_022426_synced_signaligned_aug3.csv  20251122_022426_synced_signaligned_aug4.csv  20251122_022426_synced_signaligned_aug5.csv  20251122_022559_synced_signaligned.csv  20251122_022559_synced_signaligned_aug1.csv  20251122_022559_synced_signaligned_aug2.csv  20251122_022559_synced_signaligned_aug3.csv  20251122_022559_synced_signaligned_aug4.csv  20251122_022559_synced_signaligned_aug5.csv  20251122_022712_synced_signaligned.csv  20251122_022712_synced_signaligned_aug1.csv  20251122_022712_synced_signaligned_aug2.csv  20251122_022712_synced_signaligned_aug3.csv  (+20 more)
resource/robot_parameter/: config.yaml
resource/sensor_parameter/: config.yaml
scripts/: augment_demonstration_data.py  generate_stiffness_profiles.py  generate_stiffness_profiles_global_tk.py  generate_stiffness_profiles_global_tk_enhanced.py  launch_full_stiffness_pipeline.py  launch_stiffness_force_control.py  plot_result_csv.py  test_run_policy_node.py
scripts/1_stiffness_profiling/: generate_stiffness_profiles_global_tk.py  generate_stiffness_profiles_global_tk_sign_aligned.py
scripts/2_data_augmentation/: augment_demonstration_data.py  augmentation_utils.py
scripts/3_model_learning/: evaluate_and_visualize_policies.py  evaluate_diffusion_policy.py  (+11 more)
src/: falcon_node.cpp  sense_glove_node.cpp  set_haptic_sensor_input_test  set_haptic_sensor_input_test.cpp
(+414 files in other folders)
